<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/exp_text" />

        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inc_text" />
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCat"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/editTextDate"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:id="@+id/editTextSum"
        android:hint="@string/summ_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextComment"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/comment_hint"
        android:layout_gravity="center_horizontal" />


</LinearLayout>